--- a/3.html
+++ b/3.html
@@ -8,15 +8,19 @@
   </head>
   <body>
     <script>
-      var obj = {
-        a: 1,
-        b: 2,
-      };
+      // var obj = {
+      //   a: 1,
+      //   b: 2,
+      // };
 
-      console.log(Object.keys(obj));
-      Object.keys(obj).forEach((item) => {
-        console.log(obj[item]);
-      });
+      // console.log(Object.keys(obj));
+      // Object.keys(obj).forEach((item) => {
+      //   console.log(obj[item]);
+      // });
+
+      //字符串是黑色 数字是蓝色 对象是彩色的
+      var index = 1;
+      console.log(index === "1");
     </script>
   </body>
 </html>
