--- a/5.html
+++ b/5.html
@@ -7,20 +7,19 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="app"></div>
+    <script src="./node_modules/vue/dist/vue.js"></script>
     <script>
-      async function fn() {
-        return Promise.reject(new Error("200"));
-      }
-
-      var res = fn();
-      res
-        .then(function (res) {
-          console.log(res);
-        })
-        .catch((err) => {
-          console.log(err);
-          this.$message.error("abc");
-        });
+      new Vue({
+        data() {
+          return {
+            msg: "hello world",
+          };
+        },
+        template: `
+          <h1>{{msg}}</h1>
+        `,
+      }).$mount("#app");
     </script>
   </body>
 </html>
